@@ -1,6 +1,7 @@
 2003-10-11  Paul Brook  <paul@nowt.org>
 
 	* gfortran.fortran-torture/execute/specifics.f90: New test.
+	* gfortran.fortran-torture/execute/intrinsic_achar.f90: New test.
 
 2003-10-01  Richard Henderson  <rth@redhat.com>
 
