@@ -1,3 +1,8 @@
+2003-10-11  Huang Chun  <jiwang@mail.edu.cn>
+
+	* trans-intrinsic.c (gfc_conv_intrinsic_char): Don't use
+	gfc_get_character_type.
+
 2003-10-11  Feng Wang  <wf_cs@yahoo.com>
 
 	* trans-expr.c (gfc_conv_variable): Check sym->ts, not the decl.
